class Concessionaria:
    
    def __init__(self, endereco, cnpj, numero_da_concessionaria, carro, moto, pessoa):
        self._endereco = endereco
        self._cnpj = cnpj
        self._numero_da_concessionaria = numero_da_concessionaria
        self._carro = carro
        self._moto - moto
        self._pessoa = pessoa