class Moto:
    def __init__(self, marca, ano, cilindradas):
        self.marca = marca
        self.ano = ano
        self.cilindradas = cilindradas