@startuml trabalho

title Concessionaria

class Pessoa{
    - nome: string
    - endereco: string
    - numero: int
    + cadastrar_pessoa(nome, endereco, numero)

}
class Pessoa_fisica{
    - cpf: int
    - idade: int
    - pessoa: Pessoa
    + cadastrar_pessoa_fisica(cpf, idade, pessoa)
}
class Pessoa_juridica{
    - cnpj: int
    - ano_de_fundacao: int
    - pessoa: Pessoa
    + cadastrar_pessoa_juridica(cnpj, ano_de_fundacao, pessoa)
}
class Funcionario{
    - pessoa_fisica: Pessoa_fisica
    - cargo: string
    - concessionaria: Concessionaria
    + cadastrar_funcionario(pessoa_fisica, cargo)
}
class Carro{
    - marca: string
    - tipo: string
    - ano: int
    + registrar_carro(marca, tipo, ano)
}
class Moto{
    - marca: string
    - ano: int
    - cilindradas: int
    + registrar_moto(marca, ano, cilindradas)

}
class Concessionaria{
    - endereco: string
    - cnpj: int
    - numero_da_concessionaria
    - carro: Carro
    - moto: Moto
    - pessoa: Pessoa
    + vender_carro(carro, pessoa)
    + consultar_carros(carro)
    + vender_moto(moto, pessoa)
    + consultar_moto(moto)

}

Pessoa <|-- Pessoa_fisica
Pessoa <|-- Pessoa_juridica
Pessoa *-- Concessionaria
Carro *--Concessionaria
Moto *--Concessionaria

@enduml